# promo_system

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  setup.sh
config/: settings.py  urls.py
orders/: admin.py  apps.py  exceptions.py  models.py  serializers.py  services.py  urls.py  validators.py  views.py
orders/management/commands/: seed_data.py
orders/migrations/: 0001_initial.py
orders/tests/: conftest.py  test_api.py  test_serializers.py  test_services.py  test_validation.py
